2013-01-14 Sebastien DIAZ  <sebastien.diaz@gmail.com>
        Corrected Bugs on 3.2.10
        Savannah bugs:
          bug #32742: Malformed name/value pairs not handled nicely in Cgicc.cpp
          bug #38053, incorrect soname
	  bug #36497, Form Variable Parsing Bug

2009-11-14 Sebastien DIAZ  <sebastien.diaz@gmail.com>
        Corrected Bugs on 3.2.10
        UBUNTU #219307 libcgicc5-dev still missing cgicc.pc
	Add
	RPM support with cgicc.spec

2009-11-14  Sebastien DIAZ  <sebastien.diaz@gmail.com>
	Corrected Bugs
        #26003 : CgiEnvironment getenv
	#26065 : save function
	#26917 : 3.2.8 tar files has sym links to files that don't exist
	#27681 : Make building on FreeBSD easier
	
2009-01-18  Sebastien DIAZ  <sebastien.diaz@gmail.com>
        Corrected Bugs
        #25212 	'sort' undeclared
		#25211 	dns.cpp fails with memcpy undeclared
		#25073 	query string is incorrectly parsed, when post enctype is multipart/form-data 
		#24301 	CgiEnvironment constructor fails when posts have zero length
		#23979 	Swapped documentation blocks in CgiUtils.h

2008-06-01  Sebastien DIAZ  <sebastien.diaz@gmail.com>
        Corrected Bugs
        #23341  Instalation cgicc.M4 doesn t support DESDIR 
        #23316  distribute plain file until symbolic link

2008-05-18  Sebastien DIAZ  <sebastien.diaz@gmail.com>
	
	Corrected Bugs
	#23253  Queries with a charset suffix in the content type do not get parsed from Frédéric Sagnes
	#22885  Missing includes in HTMLElement.cpp from  Chris Butler
	#22517  Version 3.2.5 identifies itself as version 3.2.4  
	#22177  Install example/cgicc.m4 per default  from   Tiziano Müller
	#22176  Remove stray @GNUCAP_LDFLAGS@  Fixed  from   Tiziano Müller
	
	Added Patches
	#6510  Queries with a charset suffix in the content type do not get parsed from    Frédéric Sagnes
	#6385  Fix wrong htmldir/docdir handling in doc/Makefile.am  from   Tiziano Müller


2008-01-19  Sebastien DIAZ  <sebastien.diaz@gmail.com>

	* cgicc/CgiUtils.h: Just little change