@@ -1,6 +1,6 @@
 /* -*-mode:c++; c-file-style: "gnu";-*- */
 /*
- *  $Id: CgiEnvironment.h,v 1.19 2007/07/02 18:48:17 sebdiaz Exp $
+ *  $Id: CgiEnvironment.h,v 1.20 2013/01/12 19:57:04 sebdiaz Exp $
  *
  *  Copyright (C) 1996 - 2004 Stephen F. Booth <sbooth@gnu.org>
  *                       2007 Sebastien DIAZ <sebastien.diaz@gmail.com>
@@ -572,6 +572,7 @@ namespace cgicc {
     std::string 		fReferrer;
     std::string 		fCookie;
     std::vector<HTTPCookie> 	fCookies;
+    std::string                 fAcceptLanguageString; 
   };
   
 } // namespace cgicc
